add img to README.md and adjust validation errors for the homepage

--- a/index.html
+++ b/index.html
@@ -55,20 +55,20 @@
             <div class="container text-center">
                 <div class="row row-col-2">
                     <div class="col-12">
-                        <div id="homepage-card"  class="card">
+                        <div class="homepage-card">
                             <h5 class="card-header">English Reading</h5>
                             <div class="card-body-main">
                                 <h5 class="card-title">Oh no Lola</h5>
-                            <a href="english.html" id="link-pages" class="btn btn-success btn-sm">Join Lola</a>
+                                <a href="english.html" class="btn btn-success btn-sm link-pages">Join Lola</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-12">
-                        <div id="homepage-card" class="card">
+                        <div class="homepage-card">
                             <h5 class="card-header">Math Games</h5>
                             <div class="card-body-main">
                                 <h5 class="card-title">Magical Maths</h5>
-                                <a href="math.html" id="link-pages" class="btn btn-warning btn-sm">Let’s Play</a>
+                                <a href="math.html" class="btn btn-warning btn-sm link-pages">Let’s Play</a>
                             </div>
                         </div>
                     </div>
@@ -76,26 +76,27 @@
             </div>
         </section>
 
+
+
         <section>
-            <div id="welcome-message">
-                <p>At Bright Minds Academy, we believe that every child is a star waiting to shine! Our interactive
-                    website is designed to help young learners improve their reading and math skills in an exciting
-                    and
-                    playful way. Through engaging games, colorful activities, and stories that spark the
-                    imagination,
-                    your child will build confidence while having fun.
+            <h2>About</h2>
+            <p>At Bright Minds Academy, we believe that every child is a star waiting to shine! Our interactive
+                website is designed to help young learners improve their reading and math skills in an exciting
+                and
+                playful way. Through engaging games, colorful activities, and stories that spark the
+                imagination,
+                your child will build confidence while having fun.
 
-                    Whether it’s solving math puzzles, exploring the world of letters and words, or tackling fun
-                    challenges, Bright Minds Academy turns learning into a magical journey. With tools tailored to
-                    different skill levels and progress tracking to celebrate every milestone, kids can grow at
-                    their
-                    own pace in a supportive and encouraging environment.
+                Whether it’s solving math puzzles, exploring the world of letters and words, or tackling fun
+                challenges, Bright Minds Academy turns learning into a magical journey. With tools tailored to
+                different skill levels and progress tracking to celebrate every milestone, kids can grow at
+                their
+                own pace in a supportive and encouraging environment.
 
-                    So, grab your thinking cap, and let’s unlock the door to endless possibilities together!
+                So, grab your thinking cap, and let’s unlock the door to endless possibilities together!
 
-                    Start your learning adventure today!
-                </p>
-            </div>
+                Start your learning adventure today!
+            </p>
         </section>
 
 
@@ -119,22 +120,14 @@
         </ul>
     </footer>
 
+
+    <!-- bootstrap script -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/5307206c46.js" crossorigin="anonymous"></script>
 </body>
-<!-- confetti npm script-->
-<script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
-<!-- javascript script -->
-<script src="assets/js/script.js"></script>
-<!-- bootstrap script -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-</script>
-<!-- font awesome -->
-<script src="https://kit.fontawesome.com/5307206c46.js" crossorigin="anonymous"></script>
-
-
-
-
-
 
 
 </html>
