--- a/english.html
+++ b/english.html
@@ -40,7 +40,7 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="">Contact us!</a>
+                <li><a href="contact.html">Contact us!</a>
                 <li>
             </ul>
         </nav>
