--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
-                <li><a href="" class="active">Home</a></li>
-                <li><a href="">Contact us!</a>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="contact.html">Contact us!</a>
                 <li>
             </ul>
         </nav>
