add hero img for contact

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,12 @@
 
     <!-- main content -->
     <main>
+        <div id="hero-contact">
+        <h2 id="hero-contact-covertext">We <em>love</em> hearing from our young learners and their families!</h2>
+    </div>
 
+   
+      </div>
     </main>
 
     <!-- footer -->
