add README.md details and fix errors on contact page, add a toTop button on the english page

--- a/english.html
+++ b/english.html
@@ -347,6 +347,10 @@
             </div>
         </div>
 
+        <div id="toTopBtn">
+            <button onclick="toTop()">Back to top</button>
+        </div>
+
 
     </main>
 
