--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
-                <li><a href="">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="contact.html" class="active">Contact us!</a>
                 <li>
             </ul>
