--- a/math.html
+++ b/math.html
@@ -53,25 +53,24 @@
     </section>
 
     <!-- game  nr2 -->
-    <section>
-        <div id="quiz2-body">
-            <div id="math-container2">
-                <h2>Test your math skills</h2>
-                <div id="math-questions" class="hide">
-                    <div id="questions">Question</div>
-                    <div id="answer-btn" class="btn-grid">
-                        <button class="btn-g2">Answer 1</button>
-                        <button class="btn-g2">Answer 2</button>
-                        <button class="btn-g2">Answer 3</button>
-                        <button class="btn-g2">Answer 4</button>
-                    </div>
-                </div>
-                <div class="controls"></div>
-                <button id="start-btn" class="start-btn btn">Start</button>
-                <button id="next-btn" class="next-btn btn hide">Next</button>
-            </div>
+
+    <div class="container">
+        <div id="question-container" class="hide">
+          <div id="question">Question</div>
+          <div id="answer-buttons" class="btn-grid">
+            <button class="btn">Answer 1</button>
+            <button class="btn">Answer 2</button>
+            <button class="btn">Answer 3</button>
+            <button class="btn">Answer 4</button>
+          </div>
         </div>
-    </section>
+        <div class="controls">
+          <button id="start-btn" class="start-btn btn">Start</button>
+          <button id="next-btn" class="next-btn btn hide">Next</button>
+        </div>
+      </div>
+    
+
 
 
     <!-- footer -->
