add flip game to bubble page

--- a/bubbles.html
+++ b/bubbles.html
@@ -46,18 +46,19 @@
         </nav>
     </header>
     <main>
-            <div id="hero">
-                <h1>Come see if Bubbles blow up!</h1>
-            </div>
+        <div id="hero2">
+            <h1>Come see if Bubbles blow up!</h1>
+        </div>
 
         <section>
             <div id="intro">
                 <h2>Put on your goggles and lets go swimming</h2>
-                <h3><em>Oh good, you made it to the second story. We hope you enjoyed following Lola to school!</em></h3>
+                <h3><em>Oh good, you made it to the second story. We hope you enjoyed following Lola to school!</em>
+                </h3>
             </div>
         </section>
 
-      
+
 
         <hr>
 
@@ -90,7 +91,7 @@
             <section>
                 <div class="col align-self-center">
                     <div class="card">
-                        <img src="x" class="card-img-top" alt="x">
+                        <img src="assets/images/old-turtle.png" class="card-img-top" alt="turtle swimming in the ocean">
                         <div class="card-body">
                             <h2 class="card-title">The Wise Old Turtle</h2>
                             <p class="card-text">
@@ -118,21 +119,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="quiz-container">
-                    <h1>Bubbles the Blowfish Vocabulary Quiz</h1>
-                    <div id="quiz">
-                      <!-- Questions will be inserted here by js-->
-                    </div>
-                    <button id="submit">Submit Quiz</button>
-                    <div id="results"></div>
-                  </div>
 
-
-                <br>
+                <hr>
 
                 <div class="col align-self-center">
                     <div class="card">
-                        <img src="assets/images/butter-worm.webp" class="card-img-top"
+                        <img src="assets/images/charlie.png" class="card-img-top"
                             alt="sad green worm on a red mushroom">
                         <div class="card-body">
                             <h2 class="card-title">Practice Makes Perfect</h2>
@@ -157,20 +149,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="quiz-container">
-                    <h1>Bubbles the Blowfish Vocabulary Quiz</h1>
-                    <div id="quiz">
-                      <!-- Questions will be inserted here by js-->
-                    </div>
-                    <button id="submit">Submit Quiz</button>
-                    <div id="results"></div>
-                  </div>
+
 
 
                 <div class="col align-self-center">
                     <div class="card">
-                        <img src="assets/images/foxy-trapped.webp" class="card-img-top"
-                            alt="small fox caught in a snare">
+                        <img src="assets/images/eel.png" class="card-img-top" alt="small fox caught in a snare">
                         <div class="card-body">
                             <h2 class="card-title">Bubbles’ Big Moment</h2>
                             <p class="card-text">
@@ -195,14 +179,141 @@
                             </p>
                         </div>
                     </div>
-                    <div class="quiz-container">
-                        <h1>Bubbles the Blowfish Vocabulary Quiz</h1>
-                        <div id="quiz">
-                          <!-- Questions will be inserted here by js-->
-                        </div>
-                        <button id="submit">Submit Quiz</button>
-                        <div id="results"></div>
-                      </div>
+<div class="cardcontainer">
+                    <div class="wrapper">
+                        <ul class="cards">
+                            <li class="card">
+                                <div class="view front-view">
+                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                </div>
+                                <div class="view back-view">
+                                    <img src="images/img-1.png" alt="card-img">
+                                </div>
+                            </li>
+                            <li class="card">
+                                <div class="view front-view">
+                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                </div>
+                                <div class="view back-view">
+                                    <img src="images/img-6.png" alt="card-img">
+                                </div>
+                            </li>
+                            <li class="card">
+                                <div class="view front-view">
+                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                </div>
+                                <div class="view back-view">
+                                    <img src="images/img-3.png" alt="card-img">
+                                </div>
+                            </li>
+                            <li class="card">
+                                <div class="view front-view">
+                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                </div>
+                                <div class="view back-view">
+                                    <img src="images/img-2.png" alt="card-img">
+                                </div>
+                            </li>
+                            <li class="card">
+                                <div class="view front-view">
+                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                </div>
+                                <div class="view back-view">
+                                    <img src="images/img-1.png" alt="card-img">
+                                </div>
+                            </li>
+                            <li class="card">
+                                <div class="view front-view">
+                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                </div>
+                                <div class="view back-view">
+                                    <img src="images/img-5.png" alt="card-img">
+                                </div>
+                            </li>
+                            <li class="card">
+                                <div class="view front-view">
+                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                </div>
+                                <div class="view back-view">
+                                    <img src="images/img-2.png" alt="card-img">
+                                </div>
+                            </li>
+                            <li class="card">
+                                <div class="view front-view">
+                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                </div>
+                                <div class="view back-view">
+                                    <img src="images/img-6.png" alt="card-img">
+                                </div>
+                            </li>
+                            <li class="card">
+                                <div class="view front-view">
+                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                </div>
+                                <div class="view back-view">
+                                    <img src="images/img-3.png" alt="card-img">
+                                </div>
+                            </li>
+                            <li class="card">
+                                <div class="view front-view">
+                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                </div>
+                                <div class="view back-view">
+                                    <img src="images/img-4.png" alt="card-img">
+                                </div>
+                            </li>
+                            <li class="card">
+                                <div class="view front-view">
+                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                </div>
+                                <div class="view back-view">
+                                    <img src="images/img-5.png" alt="card-img">
+                                </div>
+                            </li>
+                            <li class="card">
+                                <div class="view front-view">
+                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                </div>
+                                <div class="view back-view">
+                                    <img src="images/img-4.png" alt="card-img">
+                                </div>
+                            </li>
+                            <li class="card">
+                                <div class="view front-view">
+                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                </div>
+                                <div class="view back-view">
+                                    <img src="images/img-4.png" alt="card-img">
+                                </div>
+                            </li>
+                            <li class="card">
+                                <div class="view front-view">
+                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                </div>
+                                <div class="view back-view">
+                                    <img src="images/img-4.png" alt="card-img">
+                                </div>
+                            </li>
+                            <li class="card">
+                                <div class="view front-view">
+                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                </div>
+                                <div class="view back-view">
+                                    <img src="images/img-4.png" alt="card-img">
+                                </div>
+                            </li>
+                            <li class="card">
+                                <div class="view front-view">
+                                    <img src="assets/images/game-icons/question-mark_9868710.svg" alt="icon">
+                                </div>
+                                <div class="view back-view">
+                                    <img src="images/img-4.png" alt="card-img">
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
 
     </main>
 
